--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,13 @@
     <com.vptechnologies.vpfancyslider.FancySlider
         android:layout_width="match_parent"
         custom:tickColor="@android:color/white"
-        android:layout_height="64dp"/>
+        android:layout_height="64dp"
+        android:id="@+id/sliderView"/>
+
+    <Button
+        android:text="Go to 50"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"/>
 
 </LinearLayout>
